==> kibu-keyboards/qmk_firmware/qmk_firmware/lib/chibios-contrib/os/hal/ports/TIVA/LLD/UART/hal_serial_lld.c <==
#include "hal.h"

static void set_error(SerialDriver *sdp, uint16_t err)
{
  eventflags_t sts = 0;
  
  if (err & UART_MIS_FEMIS)
    sts |= SD_FRAMING_ERROR;
  if (err & UART_MIS_PEMIS)
    sts |= SD_PARITY_ERROR;
  if (err & UART_MIS_BEMIS)
    sts |= SD_BREAK_DETECTED;
  if (err & UART_MIS_OEMIS)
    sts |= SD_OVERRUN_ERROR;
  osalSysLockFromISR();
  chnAddFlagsI(sdp, sts);
  osalSysUnlockFromISR();
}

void sd_lld_init(void)
{
#if TIVA_SERIAL_USE_UART0
  sdObjectInit(&SD1);
  iqObjectInit(&SD1.iqueue, sd_in_buf1, sizeof sd_in_buf1, NULL, &SD1);
  oqObjectInit(&SD1.oqueue, sd_out_buf1, sizeof sd_out_buf1, notify1, &SD1);
  SD1.uart = UART0_BASE;
#endif

#if TIVA_SERIAL_USE_UART1
  sdObjectInit(&SD2);
  iqObjectInit(&SD2.iqueue, sd_in_buf2, sizeof sd_in_buf2, NULL, &SD2);
  oqObjectInit(&SD2.oqueue, sd_out_buf2, sizeof sd_out_buf2, notify2, &SD2);
  SD2.uart = UART1_BASE;
#endif

#if TIVA_SERIAL_USE_UART2
  sdObjectInit(&SD3);
  iqObjectInit(&SD3.iqueue, sd_in_buf3, sizeof sd_in_buf3, NULL, &SD3);
  oqObjectInit(&SD3.oqueue, sd_out_buf3, sizeof sd_out_buf3, notify3, &SD3);
  SD3.uart = UART2_BASE;
#endif

#if TIVA_SERIAL_USE_UART3
  sdObjectInit(&SD4);
  iqObjectInit(&SD4.iqueue, sd_in_buf4, sizeof sd_in_buf4, NULL, &SD4);
  oqObjectInit(&SD4.oqueue, sd_out_buf4, sizeof sd_out_buf4, notify4, &SD4);
  SD4.uart = UART3_BASE;
#endif

#if TIVA_SERIAL_USE_UART4
  sdObjectInit(&SD5);
  iqObjectInit(&SD5.iqueue, sd_in_buf5, sizeof sd_in_buf5, NULL, &SD5);
  oqObjectInit(&SD5.oqueue, sd_out_buf5, sizeof sd_out_buf5, notify5, &SD5);
  SD5.uart = UART4_BASE;
#endif

#if TIVA_SERIAL_USE_UART5
  sdObjectInit(&SD6);
  iqObjectInit(&SD6.iqueue, sd_in_buf6, sizeof sd_in_buf6, NULL, &SD6);
  oqObjectInit(&SD6.oqueue, sd_out_buf6, sizeof sd_out_buf6, notify6, &SD6);
  SD6.uart = UART5_BASE;
#endif

#if TIVA_SERIAL_USE_UART6
  sdObjectInit(&SD7);
  iqObjectInit(&SD7.iqueue, sd_in_buf7, sizeof sd_in_buf7, NULL, &SD7);
  oqObjectInit(&SD7.oqueue, sd_out_buf7, sizeof sd_out_buf7, notify7, &SD7);
  SD7.uart = UART6_BASE;
#endif

#if TIVA_SERIAL_USE_UART7
  sdObjectInit(&SD8);
  iqObjectInit(&SD8.iqueue, sd_in_buf8, sizeof sd_in_buf8, NULL, &SD8);
  oqObjectInit(&SD8.oqueue, sd_out_buf8, sizeof sd_out_buf8, notify8, &SD8);
  SD8.uart = UART7_BASE;
#endif
}

void sd_lld_start(SerialDriver *sdp, const SerialConfig *config)
{
  if (config == NULL)
    config = &sd_default_config;

  if (sdp->state == SD_STOP) {
#if TIVA_SERIAL_USE_UART0
    if (&SD1 == sdp) {
      HWREG(SYSCTL_RCGCUART) |= (1 << 0);

      while (!(HWREG(SYSCTL_PRUART) & (1 << 0)))
        ;

      nvicEnableVector(TIVA_UART0_NUMBER, TIVA_SERIAL_UART0_PRIORITY);
    }
#endif
#if TIVA_SERIAL_USE_UART1
    if (&SD2 == sdp) {
      HWREG(SYSCTL_RCGCUART) |= (1 << 1);

      while (!(HWREG(SYSCTL_PRUART) & (1 << 1)))
        ;

      nvicEnableVector(TIVA_UART1_NUMBER, TIVA_SERIAL_UART1_PRIORITY);
    }
#endif
#if TIVA_SERIAL_USE_UART2
    if (&SD3 == sdp) {
      HWREG(SYSCTL_RCGCUART) |= (1 << 2);

      while (!(HWREG(SYSCTL_PRUART) & (1 << 2)))
        ;

      nvicEnableVector(TIVA_UART2_NUMBER, TIVA_SERIAL_UART2_PRIORITY);
    }
#endif
#if TIVA_SERIAL_USE_UART3
    if (&SD4 == sdp) {
      HWREG(SYSCTL_RCGCUART) |= (1 << 3);

      while (!(HWREG(SYSCTL_PRUART) & (1 << 3)))
        ;

      nvicEnableVector(TIVA_UART3_NUMBER, TIVA_SERIAL_UART3_PRIORITY);
    }
#endif
#if TIVA_SERIAL_USE_UART4
    if (&SD5 == sdp) {
      HWREG(SYSCTL_RCGCUART) |= (1 << 4);

      while (!(HWREG(SYSCTL_PRUART) & (1 << 4)))
        ;

      nvicEnableVector(TIVA_UART4_NUMBER, TIVA_SERIAL_UART4_PRIORITY);
    }
#endif
#if TIVA_SERIAL_USE_UART5
    if (&SD6 == sdp) {
      HWREG(SYSCTL_RCGCUART) |= (1 << 5);

      while (!(HWREG(SYSCTL_PRUART) & (1 << 5)))
        ;

      nvicEnableVector(TIVA_UART5_NUMBER, TIVA_SERIAL_UART5_PRIORITY);
    }
#endif
#if TIVA_SERIAL_USE_UART6
    if (&SD7 == sdp) {
      HWREG(SYSCTL_RCGCUART) |= (1 << 6);

      while (!(HWREG(SYSCTL_PRUART) & (1 << 6)))
        ;

      nvicEnableVector(TIVA_UART6_NUMBER, TIVA_SERIAL_UART6_PRIORITY);
    }
#endif
#if TIVA_SERIAL_USE_UART7
    if (&SD8 == sdp) {
      HWREG(SYSCTL_RCGCUART) |= (1 << 7);

      while (!(HWREG(SYSCTL_PRUART) & (1 << 7)))
        ;

      nvicEnableVector(TIVA_UART7_NUMBER, TIVA_SERIAL_UART7_PRIORITY);
    }
#endif
  }
  uart_init(sdp, config);
}

void sd_lld_stop(SerialDriver *sdp)
{
  if (sdp->state == SD_READY) {
    uart_deinit(sdp->uart);
#if TIVA_SERIAL_USE_UART0
    if (&SD1 == sdp) {
      HWREG(SYSCTL_RCGCUART) &= ~(1 << 0);  /* disable UART0 module */
      nvicDisableVector(TIVA_UART0_NUMBER);
      return;
    }
#endif
#if TIVA_SERIAL_USE_UART1
    if (&SD2 == sdp) {
      HWREG(SYSCTL_RCGCUART) &= ~(1 << 1);  /* disable UART1 module */
      nvicDisableVector(TIVA_UART1_NUMBER);
      return;
    }
#endif
#if TIVA_SERIAL_USE_UART2
    if (&SD3 == sdp) {
      HWREG(SYSCTL_RCGCUART) &= ~(1 << 2);  /* disable UART2 module */
      nvicDisableVector(TIVA_UART2_NUMBER);
      return;
    }
#endif
#if TIVA_SERIAL_USE_UART3
    if (&SD4 == sdp) {
      HWREG(SYSCTL_RCGCUART) &= ~(1 << 3);  /* disable UART3 module */
      nvicDisableVector(TIVA_UART3_NUMBER);
      return;
    }
#endif
#if TIVA_SERIAL_USE_UART4
    if (&SD5 == sdp) {
      HWREG(SYSCTL_RCGCUART) &= ~(1 << 4);  /* disable UART4 module */
      nvicDisableVector(TIVA_UART4_NUMBER);
      return;
    }
#endif
#if TIVA_SERIAL_USE_UART5
    if (&SD6 == sdp) {
      HWREG(SYSCTL_RCGCUART) &= ~(1 << 5);  /* disable UART5 module */
      nvicDisableVector(TIVA_UART5_NUMBER);
      return;
    }
#endif
#if TIVA_SERIAL_USE_UART6
    if (&SD7 == sdp) {
      HWREG(SYSCTL_RCGCUART) &= ~(1 << 6);  /* disable UART6 module */
      nvicDisableVector(TIVA_UART6_NUMBER);
      return;
    }
#endif
#if TIVA_SERIAL_USE_UART7
    if (&SD8 == sdp) {
      HWREG(SYSCTL_RCGCUART) &= ~(1 << 7);  /* disable UART7 module */
      nvicDisableVector(TIVA_UART7_NUMBER);
      return;
    }
#endif
  }
}
