==> kibu-keyboards/qmk_firmware/qmk_firmware/lib/chibios-contrib/os/hal/ports/AT32/LLD/USARTv1/hal_serial_lld.c <==
#include "hal.h"

static void set_error(SerialDriver *sdp, uint16_t sts) {
  eventflags_t status = 0;

  if (sts & USART_STS_ROERR)
    status |= SD_OVERRUN_ERROR;
  if (sts & USART_STS_PERR)
    status |= SD_PARITY_ERROR;
  if (sts & USART_STS_FERR)
    status |= SD_FRAMING_ERROR;
  if (sts & USART_STS_NERR)
    status |= SD_NOISE_ERROR;
  chnAddFlagsI(sdp, status);
}

void sd_lld_init(void) {

#if AT32_SERIAL_USE_USART1
  sdObjectInit(&SD1, NULL, notify1);
  SD1.usart = USART1;
  SD1.clock = AT32_PCLK2;
#if !defined(AT32_USART1_SUPPRESS_ISR) && defined(AT32_USART1_NUMBER)
  nvicEnableVector(AT32_USART1_NUMBER, AT32_SERIAL_USART1_PRIORITY);
#endif
#endif

#if AT32_SERIAL_USE_USART2
  sdObjectInit(&SD2, NULL, notify2);
  SD2.usart = USART2;
  SD2.clock = AT32_PCLK1;
#if !defined(AT32_USART2_SUPPRESS_ISR) && defined(AT32_USART2_NUMBER)
  nvicEnableVector(AT32_USART2_NUMBER, AT32_SERIAL_USART2_PRIORITY);
#endif
#endif

#if AT32_SERIAL_USE_USART3
  sdObjectInit(&SD3, NULL, notify3);
  SD3.usart = USART3;
  SD3.clock = AT32_PCLK1;
#if !defined(AT32_USART3_SUPPRESS_ISR) && defined(AT32_USART3_NUMBER)
  nvicEnableVector(AT32_USART3_NUMBER, AT32_SERIAL_USART3_PRIORITY);
#endif
#endif

#if AT32_SERIAL_USE_UART4
  sdObjectInit(&SD4, NULL, notify4);
  SD4.usart = UART4;
  SD4.clock = AT32_PCLK1;
#if !defined(AT32_UART4_SUPPRESS_ISR) && defined(AT32_UART4_NUMBER)
  nvicEnableVector(AT32_UART4_NUMBER, AT32_SERIAL_UART4_PRIORITY);
#endif
#endif

#if AT32_SERIAL_USE_UART5
  sdObjectInit(&SD5, NULL, notify5);
  SD5.usart = UART5;
  SD5.clock = AT32_PCLK1;
#if !defined(AT32_UART5_SUPPRESS_ISR) && defined(AT32_UART5_NUMBER)
  nvicEnableVector(AT32_UART5_NUMBER, AT32_SERIAL_UART5_PRIORITY);
#endif
#endif
}

void sd_lld_start(SerialDriver *sdp, const SerialConfig *config) {

  if (config == NULL)
    config = &default_config;

  if (sdp->state == SD_STOP) {
#if AT32_SERIAL_USE_USART1
    if (&SD1 == sdp) {
      crmEnableUSART1(true);
    }
#endif
#if AT32_SERIAL_USE_USART2
    if (&SD2 == sdp) {
      crmEnableUSART2(true);
    }
#endif
#if AT32_SERIAL_USE_USART3
    if (&SD3 == sdp) {
      crmEnableUSART3(true);
    }
#endif
#if AT32_SERIAL_USE_UART4
    if (&SD4 == sdp) {
      crmEnableUART4(true);
    }
#endif
#if AT32_SERIAL_USE_UART5
    if (&SD5 == sdp) {
      crmEnableUART5(true);
    }
#endif
  }
  usart_init(sdp, config);
}

void sd_lld_stop(SerialDriver *sdp) {

  if (sdp->state == SD_READY) {
    usart_deinit(sdp->usart);
#if AT32_SERIAL_USE_USART1
    if (&SD1 == sdp) {
      crmDisableUSART1();
      return;
    }
#endif
#if AT32_SERIAL_USE_USART2
    if (&SD2 == sdp) {
      crmDisableUSART2();
      return;
    }
#endif
#if AT32_SERIAL_USE_USART3
    if (&SD3 == sdp) {
      crmDisableUSART3();
      return;
    }
#endif
#if AT32_SERIAL_USE_UART4
    if (&SD4 == sdp) {
      crmDisableUART4();
      return;
    }
#endif
#if AT32_SERIAL_USE_UART5
    if (&SD5 == sdp) {
      crmDisableUART5();
      return;
    }
#endif
  }
}
